# svg-icon-gen

./: README.md  converter  pyproject.toml
.github/workflows/: publish.yml
src/svg_icon_gen/: cli.py
